client/src/components/Mypage/Profile.css
#Profile {
  flex: 0 1 20rem;
  display: flex;
  width: 100%;
  flex-direction: column;
}
.profile-container:nth-child(1) {
  flex: 0 1 4rem;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding-left: 2rem;
  border-bottom: 1px solid black;
}
.profile-container:nth-child(1) > span{
  font-size: 1.5rem;
  font-weight: 700;
}

.profile-container:nth-child(2){
  flex: 1 1 0;
  display: flex;
  justify-content: center;
  align-items: center;
}
.editProfileModal-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(161, 161, 161, 0.559);
}
.editProfileModal-background-a {
  width: 100%;
  height: 100%;
  position: relative;
  
}
/*! UserImage */
#UserImage {
  border: 1px solid black;
  width: 15rem;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
#UserImage > form {
  margin-top: 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}
#profile-image{
  object-fit: contain;
  width: 10rem;
  height: 10rem;
  cursor: pointer;
  
}
#UserImage .delete-button {
  width: 5rem;
  height: 1.5rem;
  margin-top: 1rem;
}
#UserImage .delete-button > div{
  height: 1.5rem;
  border: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
  cursor: pointer;
}

/*! UserInfo */
#UserInfo {
  border: 1px solid black;
  width: 35rem;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* align-items: center; */
}
#UserInfo .infoBox {
  margin-top: 0.5rem;
  margin-bottom: 0.3rem;
}
#UserInfo .infoBox > span {
  margin: 0 1rem;
  font-size: 1rem;
}
#UserInfo .infoBox > div {
  font-size: 1.5rem;
  margin: 0.5rem 1rem;
  display: flex;
  justify-content: space-between;
}
#UserInfo .edit-button {
  font-size: 1.2rem;
  cursor: pointer;
  width: 3.5rem;
  height: 1.5rem;
  border: 1px solid black;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
}

